--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Traveler Game</title>
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="/src/style.css" />
     <script src="main.js"></script> -->
 </head>
